--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
 
     <string name="action_settings">Settings</string>
 
+    <string name="movie_year">上映时间：</string>
+    <string name="movie_actor">主演：</string>
     <string name="collect_count_hint">观影人数：</string>
 </resources>
